<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hitch.hitch.Activity.EducationalDetailActivity">

    <EditText
        android:id="@+id/unvi_name"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:hint="@string/univ_name"/>

    <EditText
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/college_name"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/college_name"/>

    <EditText
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/college_place"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/college_loc"/>

    <EditText
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/batch_start_date"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/year"/>

    <AutoCompleteTextView
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/graduate"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/gradu"/>

    <AutoCompleteTextView
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/degree"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/degree"/>

    <EditText
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/branch"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/branch"/>

    <Button
        android:id="@+id/edu_detail_button"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textColor="#ffffff"
        android:background="#ff0000"/>

</LinearLayout>
